@@ -14,6 +14,8 @@ v0.6.2
 [B] fixed stalling situation in crofsock under higher load
 [B] making class indent thread aware
 [B] fixed buffer bloat like situation in crofqueue under high loads
+[O] fixed hex output for classes cofgroupmod and cofmsg_group_mod i
+    for group-id. Fixes issue #13.
 
 v0.6.1
 
